Build adjacency map efficiently