@@ -1,9 +1,9 @@
-package file_reader;
+package pdxfile;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.List;
-import java.util.Map;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import org.antlr.v4.runtime.CharStreams;
 import org.junit.jupiter.api.Test;
 
@@ -11,7 +11,7 @@ final class PdxFileReaderTest {
 
   @Test
   void parseLines() throws Exception {
-    // Given
+
     var nestedConfig =
         """
               aaa = {
@@ -36,28 +36,25 @@ final class PdxFileReaderTest {
               }
               """;
 
-    // When
     var parsedMap = PdxFileReader.parseFileToDataMap(CharStreams.fromString(nestedConfig));
 
-    // Then
     assertThat(parsedMap)
         .isEqualTo(
-            Map.of(
+            ImmutableMap.of(
                 "aaa",
-                Map.of(
-                    "prop1",
-                    "abc",
-                    "prop2",
-                    "\"ccc\"",
-                    "nested_array",
-                    List.of("item1", "item2"),
-                    "nested_prop",
-                    Map.of("item1", "value1"),
-                    "prop3",
-                    "no",
-                    "prop4",
-                    0.3),
-                "bbb",
-                Map.of("prop1", "something")));
+                    ImmutableMap.of(
+                        "prop1",
+                        "abc",
+                        "prop2",
+                        "\"ccc\"",
+                        "nested_array",
+                        ImmutableList.of("item1", "item2"),
+                        "nested_prop",
+                        ImmutableMap.of("item1", "value1"),
+                        "prop3",
+                        "no",
+                        "prop4",
+                        0.3),
+                "bbb", ImmutableMap.of("prop1", "something")));
   }
 }
