@@ -2,9 +2,9 @@ package state;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
+import com.google.common.collect.ImmutableList;
 import country.Country;
 import culture.Culture;
-import java.util.List;
 import org.junit.jupiter.api.Test;
 import province.Province;
 
@@ -12,12 +12,11 @@ final class StateWriterTest {
 
   @Test
   void serialiseHistoryStates() throws Exception {
-    //
     var state =
         new State(
             "STATE_MALAYA",
             null,
-            List.of(new Culture("malay")),
+            ImmutableList.of(new Culture("malay")),
             null,
             null,
             null,
@@ -30,21 +29,20 @@ final class StateWriterTest {
         new RegionState(
             state,
             new Country("JOH"),
-            List.of(new Province("x76546D"), new Province("x0080B0")),
-            List.of(),
-            List.of());
+            ImmutableList.of(new Province("x76546D"), new Province("x0080B0")),
+            ImmutableList.of(),
+            ImmutableList.of());
     var regionState2 =
         new RegionState(
             state,
             new Country("SIA"),
-            List.of(new Province("xF9F87A"), new Province("x80C0B0"), new Province("xCAB9F2")),
-            List.of(),
-            List.of());
+            ImmutableList.of(
+                new Province("xF9F87A"), new Province("x80C0B0"), new Province("xCAB9F2")),
+            ImmutableList.of(),
+            ImmutableList.of());
 
-    // When
-    var strings = StateWriter.serialiseHistoryStates(List.of(regionState1, regionState2));
+    var strings = StateWriter.serialiseHistoryStates(ImmutableList.of(regionState1, regionState2));
 
-    // Then
     assertThat(String.join("\n", strings) + "\n")
         .isEqualTo(
             """
